# Claw-Sudoku

./: CMakeCache.txt  CMakeLists.txt  Claw_Sudoku  Makefile  README.md  build.sh  case1.txt  case2.txt  cmake_install.cmake  main.cc  run.sh  sudoku.txt  test  test.txt
include/: api.hpp  common.hpp  gen.hpp  sol.hpp  sudoku.hpp
report/: report.md
src/: api.cc  common.cc  gen.cc  sol.cc  sudoku.cc  test.cc
test/testcase/: bad-chara.txt  bad-sudoku.txt  case1.txt  case2.txt  case3.txt  ilegal.txt  incomplete.txt  single.txt  test.txt
